--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis saepe
-      at labore minima laudantium blanditiis quae corrupti pariatur aliquam
-      provident!
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
