Modify the button to uppercase.

--- a/playground.html
+++ b/playground.html
@@ -27,7 +27,7 @@
               </p>
             </div>
             <a href="#" class="btn btn--secondary btn--stretched"
-              >Get started</a
+              >Get Started</a
             >
           </div>
         </div>
