--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           class="input"
           placeholder="Enter domain name here ..."
         />
-        <a class="btn btn--accent">
+        <a class="btn btn--accent" href="#">
           <svg class="icon icon--white">
             <use xlink:href="images/sprite.svg#search"></use></svg
           >Search
